@@ -190,7 +190,7 @@ Travel::Status::DE::IRIS(3pm).
 
 =head1 AUTHOR
 
-Copyright (C) 2014 by Daniel Friesel E<lt>derf@finalrewind.orgE<gt>
+Copyright (C) 2014-2015 by Daniel Friesel E<lt>derf@finalrewind.orgE<gt>
 
 =head1 LICENSE
 
